[FIX] mail: fix scrollHeight flicker on firefox

--- a/addons/mail/static/src/new/composer/composer.scss
+++ b/addons/mail/static/src/new/composer/composer.scss
@@ -62,3 +62,8 @@
     animation: 0.02s slide-top !important;
     animation: 0.02s slide-bottom !important;
 }
+
+.o-mail-composer-fake {
+    height: 0;
+    top: -10000px;
+}
